# metaspn-schemas

./: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
src/metaspn_schemas/: __init__.py  core.py  entities.py  features.py  ingestion.py  learning.py  outcomes.py  recommendations.py  season1.py  social.py  state_fragments.py  state_machine.py  tasks.py  token_promises.py
src/metaspn_schemas/utils/: __init__.py  ids.py  serde.py  time.py
test/: test_backcompat.py  test_demo_contracts.py  test_ids.py  test_ingestion.py  test_m1_contracts.py  test_m2_contracts.py  test_m3_learning_contracts.py  test_season1_contracts.py  test_serde.py  test_state_machine.py  test_token_promises.py
